<resources>

    <!-- General -->
    <string name="login_signup_email">E-mail</string>
    <string name="login_signup_password">Password</string>
    <string name="login_login">Log In</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_signup_terms_conditions">By joining you agree to our <u><a href="http://www.wolox.com.ar">Terms &amp; Conditions</a></u></string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_join">Join</string>
    <string name="signup_signup"><b>Sign up</b></string>
    <string name="home_wolox">Wolox</string>
    <string name="home_news_text_view">News</string>
    <string name="home_profile_text_view">Profile</string>

    <string name="news_tab">News</string>
    <string name="profile_tab"><Profile></Profile></string>
</resources>
